lab1/parser.output
Terminals unused in grammar

   ONE_PLUS
   PLUS_ONE
   MINUS_ONE
   ASSIGNOP_MINUS
   ASSIGNOP_PLUS
   ASSIGNOP_DIV
   ASSIGNOP_STAR


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: %empty
   15       | ID

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB Locate RB

   19 Locate: INT

   20 FunDec: ID LP VarList RP
   21       | ID LP RP

   22 VarList: ParamDec
   23        | ParamDec COMMA VarList

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmList RC
   26       | error RC

   27 StmList: %empty
   28        | Stmt StmList

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | FOR LP ForDec RP Stmt
   36     | BREAK SEMI
   37     | CONTINUE SEMI
   38     | error SEMI

   39 ForDec: Exp SEMI Exp SEMI Exp

   40 DefList: %empty
   41        | Def DefList

   42 Def: Specifier DecList SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp PLUS PLUS
   53    | PLUS PLUS Exp
   54    | Exp PLUS ASSIGNOP Exp
   55    | Exp MINUS Exp
   56    | Exp MINUS MINUS
   57    | ATUO_MINUS Exp
   58    | Exp MINUS ASSIGNOP Exp
   59    | Exp STAR Exp
   60    | Exp STAR ASSIGNOP Exp
   61    | Exp DIV Exp
   62    | Exp DIV ASSIGNOP Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT
   73    | CHAR
   74    | STRING
   75    | error RP

   76 Args: Exp COMMA Args
   77     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 26 38 75
INT (258) 19 71
FLOAT (259) 72
CHAR (260) 73
STRING (261) 74
ID (262) 15 16 17 20 21 66 67 69 70
TYPE (263) 10
RELOP (264) 50
STRUCT (265) 12 13
LP (266) 20 21 32 33 34 35 63 66 67
RP (267) 20 21 32 33 34 35 63 66 67 75
LB (268) 18 68
RB (269) 18 68
LC (270) 12 25
RC (271) 12 25 26
SEMI (272) 4 5 7 29 31 36 37 38 39 42
COMMA (273) 9 23 44 76
DOT (274) 69
ONE_PLUS (275)
ATUO_MINUS (276) 57
PLUS_ONE (277)
MINUS_ONE (278)
PLUS (279) 51 52 53 54
MINUS (280) 55 56 58 64
STAR (281) 59 60
DIV (282) 61 62
ASSIGNOP (283) 46 47 54 58 60 62
ASSIGNOP_MINUS (284)
ASSIGNOP_PLUS (285)
ASSIGNOP_DIV (286)
ASSIGNOP_STAR (287)
AND (288) 48
OR (289) 49
NOT (290) 65
IF (291) 32 33
ELSE (292) 33
WHILE (293) 34
FOR (294) 35
RETURN (295) 31
BREAK (296) 36
CONTINUE (297) 37
UMINUS (298)
LOWER_THEN_ELSE (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
Program (46)
    on left: 1, on right: 0
ExtDefList (47)
    on left: 2 3, on right: 1 3
ExtDef (48)
    on left: 4 5 6 7, on right: 3
ExtDecList (49)
    on left: 8 9, on right: 4 9
Specifier (50)
    on left: 10 11, on right: 4 5 6 24 42
StructSpecifier (51)
    on left: 12 13, on right: 11
OptTag (52)
    on left: 14 15, on right: 12
Tag (53)
    on left: 16, on right: 13
VarDec (54)
    on left: 17 18, on right: 8 9 18 24 45 46
Locate (55)
    on left: 19, on right: 18
FunDec (56)
    on left: 20 21, on right: 6
VarList (57)
    on left: 22 23, on right: 20 23
ParamDec (58)
    on left: 24, on right: 22 23
CompSt (59)
    on left: 25 26, on right: 6 30
StmList (60)
    on left: 27 28, on right: 25 28
Stmt (61)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 28 32 33 34 35
ForDec (62)
    on left: 39, on right: 35
DefList (63)
    on left: 40 41, on right: 12 25 41
Def (64)
    on left: 42, on right: 41
DecList (65)
    on left: 43 44, on right: 42 44
Dec (66)
    on left: 45 46, on right: 43 44
Exp (67)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69 70 71 72 73 74 75, on right: 29 31 32 33 34 39 46
    47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 68 69
    76 77
Args (68)
    on left: 76 77, on right: 66 76


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB Locate RB

    LB     shift, and go to state 23
    COMMA  shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


State 20

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 21

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 31

    Specifier        go to state 32
    StructSpecifier  go to state 8
    VarList          go to state 33
    ParamDec         go to state 34


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   18 VarDec: VarDec LB . Locate RB

    INT  shift, and go to state 35

    Locate  go to state 36


State 24

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 18


State 25

   26 CompSt: error . RC

    RC  shift, and go to state 39


State 26

   25 CompSt: LC . DefList StmList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   42 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 44


State 30

   41 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 30


State 31

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 32

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 46


State 33

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 47


State 34

   22 VarList: ParamDec .
   23        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 48

    $default  reduce using rule 22 (VarList)


State 35

   19 Locate: INT .

    $default  reduce using rule 19 (Locate)


State 36

   18 VarDec: VarDec LB Locate . RB

    RB  shift, and go to state 49


State 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


State 40

   25 CompSt: LC DefList . StmList RC

    error       shift, and go to state 50
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    CHAR        shift, and go to state 53
    STRING      shift, and go to state 54
    ID          shift, and go to state 55
    LP          shift, and go to state 56
    LC          shift, and go to state 26
    ATUO_MINUS  shift, and go to state 57
    PLUS        shift, and go to state 58
    MINUS       shift, and go to state 59
    NOT         shift, and go to state 60
    IF          shift, and go to state 61
    WHILE       shift, and go to state 62
    FOR         shift, and go to state 63
    RETURN      shift, and go to state 64
    BREAK       shift, and go to state 65
    CONTINUE    shift, and go to state 66

    RC  reduce using rule 27 (StmList)

    CompSt   go to state 67
    StmList  go to state 68
    Stmt     go to state 69
    Exp      go to state 70


State 41

   18 VarDec: VarDec . LB Locate RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 23
    ASSIGNOP  shift, and go to state 71

    $default  reduce using rule 45 (Dec)


State 42

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


State 43

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 43 (DecList)


State 44

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 45

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 46

   18 VarDec: VarDec . LB Locate RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 24 (ParamDec)


State 47

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 48

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 32
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 34


State 49

   18 VarDec: VarDec LB Locate RB .

    $default  reduce using rule 18 (VarDec)


State 50

   26 CompSt: error . RC
   38 Stmt: error . SEMI
   75 Exp: error . RP

    RP    shift, and go to state 75
    RC    shift, and go to state 39
    SEMI  shift, and go to state 76


State 51

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 52

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 53

   73 Exp: CHAR .

    $default  reduce using rule 73 (Exp)


State 54

   74 Exp: STRING .

    $default  reduce using rule 74 (Exp)


State 55

   66 Exp: ID . LP Args RP
   67    | ID . LP RP
   70    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 70 (Exp)


State 56

   63 Exp: LP . Exp RP

    error       shift, and go to state 78
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    CHAR        shift, and go to state 53
    STRING      shift, and go to state 54
    ID          shift, and go to state 55
    LP          shift, and go to state 56
    ATUO_MINUS  shift, and go to state 57
    PLUS        shift, and go to state 58
    MINUS       shift, and go to state 59
    NOT         shift, and go to state 60

    Exp  go to state 79


State 57

   57 Exp: ATUO_MINUS . Exp

    error       shift, and go to state 78
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    CHAR        shift, and go to state 53
    STRING      shift, and go to state 54
    ID          shift, and go to state 55
    LP          shift, and go to state 56
    ATUO_MINUS  shift, and go to state 57
    PLUS        shift, and go to state 58
    MINUS       shift, and go to state 59
    NOT         shift, and go to state 60

    Exp  go to state 80


State 58

   53 Exp: PLUS . PLUS Exp

    PLUS  shift, and go to state 81


State 59

   64 Exp: MINUS . Exp

    error       shift, and go to state 78
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    CHAR        shift, and go to state 53
    STRING      shift, and go to state 54
    ID          shift, and go to state 55
    LP          shift, and go to state 56
    ATUO_MINUS  shift, and go to state 57
    PLUS        shift, and go to state 58
    MINUS       shift, and go to state 59
    NOT         shift, and go to state 60

    Exp  go to state 82


State 60

   65 Exp: NOT . Exp

    error       shift, and go to state 78
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    CHAR        shift, and go to state 53
    STRING      shift, and go to state 54
    ID          shift, and go to state 55
    LP          shift, and go to state 56
    ATUO_MINUS  shift, and go to state 57
    PLUS        shift, and go to state 58
    MINUS       shift, and go to state 59
    NOT         shift, and go to state 60

    Exp  go to state 83


State 61

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 84


State 62

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 85


State 63

   35 Stmt: FOR . LP ForDec RP Stmt

    LP  shift, and go to state 86


State 64

   31 Stmt: RETURN . Exp SEMI

    error       shift, and go to state 78
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    CHAR        shift, and go to state 53
    STRING      shift, and go to state 54
    ID          shift, and go to state 55
    LP          shift, and go to state 56
    ATUO_MINUS  shift, and go to state 57
    PLUS        shift, and go to state 58
    MINUS       shift, and go to state 59
    NOT         shift, and go to state 60

    Exp  go to state 87


State 65

   36 Stmt: BREAK . SEMI

    SEMI  shift, and go to state 88


State 66

   37 Stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 89


State 67

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 68

   25 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 90


State 69

   28 StmList: Stmt . StmList

    error       shift, and go to state 50
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    CHAR        shift, and go to state 53
    STRING      shift, and go to state 54
    ID          shift, and go to state 55
    LP          shift, and go to state 56
    LC          shift, and go to state 26
    ATUO_MINUS  shift, and go to state 57
    PLUS        shift, and go to state 58
    MINUS       shift, and go to state 59
    NOT         shift, and go to state 60
    IF          shift, and go to state 61
    WHILE       shift, and go to state 62
    FOR         shift, and go to state 63
    RETURN      shift, and go to state 64
    BREAK       shift, and go to state 65
    CONTINUE    shift, and go to state 66

    RC  reduce using rule 27 (StmList)

    CompSt   go to state 67
    StmList  go to state 91
    Stmt     go to state 69
    Exp      go to state 70


State 70

   29 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . PLUS PLUS
   54    | Exp . PLUS ASSIGNOP Exp
   55    | Exp . MINUS Exp
   56    | Exp . MINUS MINUS
   58    | Exp . MINUS ASSIGNOP Exp
   59    | Exp . STAR Exp
   60    | Exp . STAR ASSIGNOP Exp
   61    | Exp . DIV Exp
   62    | Exp . DIV ASSIGNOP Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    RELOP     shift, and go to state 92
    LB        shift, and go to state 93
    SEMI      shift, and go to state 94
    DOT       shift, and go to state 95
    PLUS      shift, and go to state 96
    MINUS     shift, and go to state 97
    STAR      shift, and go to state 98
    DIV       shift, and go to state 99
    ASSIGNOP  shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102


State 71

   46 Dec: VarDec ASSIGNOP . Exp

    error       shift, and go to state 78
    INT         shift, and go to state 51
    FLOAT       shift, and go to state 52
    CHAR        shift, and go to state 53
    STRING      shift, and go to state 54
    ID          shift, and go to state 55
    LP          shift, and go to state 56
    ATUO_MINUS  shift, and go to state 57
    PLUS        shift, and go to state 58
    MINUS       shift, and go to state 59
    NOT         shift, and go to state 60

    Exp  go to state 103


State 72

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 73

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 41
    DecList  go to state 104
    Dec      go to state 43


State 74

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 75

   75 Exp: error RP .

    $default  reduce using rule 75 (Exp)


State 76

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 77

   66 Exp: ID LP . Args RP
   67    | ID LP . RP
